--- a/blog/2018/Отступ-в-Формальную-Философию.md
+++ b/blog/2018/Отступ-в-Формальную-Философию.md
@@ -1,4 +1,4 @@
-extends ../../../../layouts/post
+extends ../../../layouts/post
 
 block title 
     title adam | Блог | Отступ в Формальную Философию
